--- a/tareadwes24/pom.xml
+++ b/tareadwes24/pom.xml
@@ -7,11 +7,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
-
+		<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
 		<dependency>
-			<groupId>jakarta.xml.bind</groupId>
-			<artifactId>jakarta.xml.bind-api</artifactId>
-			<version>4.0.2</version>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>9.1.0</version>
 		</dependency>
 
 
